      mode active.
    - ScrollingPanel drag and scroll events only raised if stylus is actually
      moved whilst dragging mode active.
    - MultiLineTextBox greys out text when disabled.
    - MultiLineTextBox::removeText() correctly repositions cursor.
    - TextBox greys out text when disabled.
    - Scrolltest compiles correctly.
    - SimpleScreen and SimpleWindow helper gadgets removed.
  
  - New Features:
    - Calendar test added.
    - MultiLineTextBox test added.
    - TextBox test added.
    - Added an overload to GraphicsPort to print a length of a string in a
      specific colour.
    - Restructured directories into traditional library layout.
    - Upgraded main project to VC++ 2008.
    - Added libwoopsi.a to SVN.
    - Added template example that uses libwoopsi.
    - Reorganised demo code into new demo directory.


  V0.39 (20091024)
  
  - Fixes:
    - Removed framebuffer-hitting code from DimmedScreen gadget and replaced
      with call to GraphicsPort::dim().
    - ListBox removes itself from its ListData object when deleted.
    - Keyboard example shows cursor.
    - Moved DimmedScreen into woopsi folder as an official gadget.
    - CycleButton::getPreferredDimensions() populates rect with correct values.
    - Const fixed Gadget::getRefcon().
    - Gadget::disable() and Gadget::enable() redraw the gadget by default.
    - Fixed clipRectToHierarchy() bug introduced in switch to non-recursive
      function in last release.
    - RadioButtonGroup redraws when resized.
    - RadioButtonGroup returns correct dimensions from getPreferredDimensions().
    - Updated copyright notice in defines.h.
    - Bitmap::getPixel() works correctly for large bitmaps.
    - Bitmap::drawBitmap() flushes mem correctly for DMA copy.
    - Gadget::show() clears rect cache of sibling gadgets with a lower z-index
      to ensure that they do not draw over the top of the newly-shown gadget.